--- a/主页面.html
+++ b/主页面.html
@@ -6,8 +6,8 @@
     <meta name="renderer" content="webkit" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!-- layui连接 -->
-    <link href="http://unpkg.com/layui@2.8.3/dist/css/layui.css" rel="stylesheet">
-    <script src="http://cdn.staticfile.org/layui/2.8.3/layui.js"></script>
+   <link rel="stylesheet" href="./layui.css">
+   <script src="./layui.js"></script>
     <!-- echarts 图标 -->
     <script src="
 https://cdn.jsdelivr.net/npm/echarts@5.4.2/dist/echarts.min.js
