--- a/登录页面.html
+++ b/登录页面.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>陈静机试后台管理</title>
-    <link href="http://unpkg.com/layui@2.8.3/dist/css/layui.css" rel="stylesheet">
-    <script src="http://cdn.staticfile.org/layui/2.8.3/layui.js"></script>
+<link rel="stylesheet" href="./layui.css">
+<script src="./layui.js"></script>
     <!-- 引入 layui.js -->
     <!-- swiper连接地址 -->
    <link rel="stylesheet" href="./swiper-bundle.min.css">
    <script src="./swiper-bundle.min.js"></script>
-  </head>
+  </head>   
   <body>
     <div class="wrapper">
       <!-- Swiper -->
